Fix recipe form input alignment

--- a/app/styles/_recipe-form.sass
+++ b/app/styles/_recipe-form.sass
@@ -60,10 +60,10 @@
   display: inline
 
 .recipe-form__input--hours
-  margin: 5px 20px 5px 15px
+  margin: 5px 0 5px 31px
 
 .recipe-form__input--minutes
-  margin-left: 15px
+  margin-left: 16px
   width: 38px
 
 .recipe-form__input--calories
